Fixes - diskutil to full path - unmount and eject fixes

--- a/playbooks/tmpfs/macos.yml
+++ b/playbooks/tmpfs/macos.yml
@@ -6,7 +6,7 @@
 
 - name: MacOS | mount a ram disk
   shell:
-    diskutil info "/{{ tmpfs_volume_path }}/{{ tmpfs_volume_name }}/" ||
-    diskutil erasevolume HFS+ "{{ tmpfs_volume_name }}" $(hdiutil attach -nomount ram://64000)
+    /usr/sbin/diskutil info "/{{ tmpfs_volume_path }}/{{ tmpfs_volume_name }}/" ||
+    /usr/sbin/diskutil erasevolume HFS+ "{{ tmpfs_volume_name }}" $(hdiutil attach -nomount ram://64000)
   args:
     creates: "/{{ tmpfs_volume_path }}/{{ tmpfs_volume_name }}"
