fix shell tasks

--- a/playbooks/tmpfs/macos.yml
+++ b/playbooks/tmpfs/macos.yml
@@ -5,7 +5,7 @@
     tmpfs_volume_path: /Volumes
 
 - name: MacOS | mount a ram disk
-  shell:
+  shell: >
     /usr/sbin/diskutil info "/{{ tmpfs_volume_path }}/{{ tmpfs_volume_name }}/" ||
     /usr/sbin/diskutil erasevolume HFS+ "{{ tmpfs_volume_name }}" $(hdiutil attach -nomount ram://64000)
   args:
