--- a/config.cfg
+++ b/config.cfg
@@ -154,9 +154,12 @@ cloud_providers:
     size: nano_1_0
     image: ubuntu_18_04
   scaleway:
-    size: START1-S
+    size: DEV1-S
     image: Ubuntu Bionic Beaver
     arch: x86_64
+  hetzner:
+    server_type: cx11
+    image: ubuntu-18.04
   openstack:
     flavor_ram: ">=512"
     image:  Ubuntu-18.04
