Move to Ubuntu 19.04

--- a/config.cfg
+++ b/config.cfg
@@ -162,7 +162,7 @@ cloud_providers:
     image:  Ubuntu-18.04
   cloudstack:
     size: Micro
-    image: Linux Ubuntu 18.04 LTS 64-bit
+    image: Linux Ubuntu 19.04 64-bit
     disk: 10
   vultr:
     os: Ubuntu 19.04 x64
