Allow to unblock smb and netbios in config.cfg

--- a/config.cfg
+++ b/config.cfg
@@ -108,6 +108,12 @@ unattended_reboot:
 # Block traffic between connected clients
 BetweenClients_DROP: true
 
+# Block SMB/CIFS traffic
+block_smb: true
+
+# Block NETBIOS traffic
+block_netbios: true
+
 congrats:
   common: |
     "#                          Congratulations!                            #"
