--- a/roles/common/tasks/facts.yml
+++ b/roles/common/tasks/facts.yml
@@ -6,8 +6,7 @@
 
   - name: Generate p12 export password
     shell: >
-      openssl rand 8 |
-      python3 -c 'import sys,string; chars=string.ascii_letters + string.digits + "_@"; print("".join([chars[ord(c) % 64] for c in list(sys.stdin.read())]))'
+      openssl rand -base64 9
     register: p12_password_generated
     when: p12_password is not defined
     tags: update-users
