Windows SSH key permissions workaround

--- a/config.cfg
+++ b/config.cfg
@@ -132,6 +132,7 @@ congrats:
 SSH_keys:
   comment: algo@ssh
   private: configs/algo.pem
+  private_tmp: /tmp/algo-ssh.pem
   public: configs/algo.pem.pub
 
 cloud_providers:
