--- a/playbooks/cloud-post.yml
+++ b/playbooks/cloud-post.yml
@@ -1,11 +1,16 @@
 ---
+- name: Set the vpn endpoint as a fact
+  set_fact:
+    cloud_vpn_endpoint: "{{ cloud_static_ip if cloud_static_ip|ipaddr else cloud_instance_ip }}"
+
 - name: Set subjectAltName as a fact
   set_fact:
-    IP_subject_alt_name: "{{ (IP_subject_alt_name if algo_provider == 'local' else cloud_instance_ip) | lower }}"
+    IP_subject_alt_name: "{{ (IP_subject_alt_name if algo_provider == 'local' else cloud_vpn_endpoint) | lower }}"
+    algo_server: "{{ 'localhost' if cloud_instance_ip == 'localhost' else cloud_instance_ip }}"
 
 - name: Add the server to an inventory group
   add_host:
-    name: "{% if cloud_instance_ip == 'localhost' %}localhost{% else %}{{ cloud_instance_ip }}{% endif %}"
+    name: "{{ algo_server }}"
     groups: vpn-host
     ansible_connection: "{% if cloud_instance_ip == 'localhost' %}local{% else %}ssh{% endif %}"
     ansible_ssh_user: "{{ ansible_ssh_user }}"
@@ -19,10 +24,11 @@
     algo_ssh_tunneling: "{{ algo_ssh_tunneling }}"
     algo_store_pki: "{{ algo_store_pki }}"
     IP_subject_alt_name: "{{ IP_subject_alt_name }}"
+    static_ip: "{{ static_ip | default(omit) }}"
 
 - name: Additional variables for the server
   add_host:
-    name: "{% if cloud_instance_ip == 'localhost' %}localhost{% else %}{{ cloud_instance_ip }}{% endif %}"
+    name: "{{ algo_server }}"
     ansible_ssh_private_key_file: "{{ SSH_keys.private }}"
   when: algo_provider != 'local'
 
