--- a/roles/cloud-digitalocean/tasks/main.yml
+++ b/roles/cloud-digitalocean/tasks/main.yml
@@ -25,6 +25,15 @@
       - Environment:Algo
   register: digital_ocean_droplet
 
+- name: "Create a Floating IP"
+  digital_ocean_floating_ip:
+    state: present
+    oauth_token: "{{ algo_do_token }}"
+    droplet_id: "{{ digital_ocean_droplet.data.droplet.id }}"
+  register: digital_ocean_floating_ip
+  when: static_ip
+
 - set_fact:
     cloud_instance_ip: "{{ digital_ocean_droplet.data.ip_address }}"
+    cloud_static_ip: "{{ digital_ocean_floating_ip.data.floating_ip.ip|default(omit) }}"
     ansible_ssh_user: root
