--- a/server.yml
+++ b/server.yml
@@ -51,6 +51,7 @@
               algo_dns_adblocking: {{ algo_dns_adblocking }}
               algo_ssh_tunneling: {{ algo_ssh_tunneling }}
               algo_store_pki: {{ algo_store_pki }}
+              static_ip: "{{ static_ip }}"
               IP_subject_alt_name: {{ IP_subject_alt_name }}
               ipsec_enabled: {{ ipsec_enabled }}
               wireguard_enabled: {{ wireguard_enabled }}
@@ -63,7 +64,7 @@
 
         - name: Create a symlink if deploying to localhost
           file:
-            src: "{{ IP_subject_alt_name }}"
+            src: "{{ algo_server }}"
             dest: configs/localhost
             state: link
             force: true
