Separate ingress IP draft

--- a/config.cfg
+++ b/config.cfg
@@ -26,6 +26,13 @@ ipsec_enabled: true
 wireguard_enabled: true
 wireguard_port: 51820
 
+# This feature allows you to configure the Algo server to send outbound traffic
+# through a different external IP address than the one you are establishing the VPN connection with.
+# More info https://trailofbits.github.io/algo/cloud-alternative-ingress-ip.html
+# Available for the following cloud providers:
+# - DigitalOcean
+alternative_ingress_ip: false
+
 # Reduce the MTU of the VPN tunnel
 # Some cloud and internet providers use a smaller MTU (Maximum Transmission
 # Unit) than the normal value of 1500 and if you don't reduce the MTU of your
