--- a/roles/cloud-digitalocean/tasks/main.yml
+++ b/roles/cloud-digitalocean/tasks/main.yml
@@ -26,6 +26,19 @@
       - Environment:Algo
   register: digital_ocean_droplet
 
+- block:
+  - name: "Create a Floating IP"
+    digital_ocean_floating_ip:
+      state: present
+      oauth_token: "{{ algo_do_token }}"
+      droplet_id: "{{ digital_ocean_droplet.data.droplet.id }}"
+    register: digital_ocean_floating_ip
+
+  - name: Set the static ip as a fact
+    set_fact:
+      cloud_alternative_ingress_ip: "{{ digital_ocean_floating_ip.data.floating_ip.ip }}"
+  when: alternative_ingress_ip
+
 - set_fact:
     cloud_instance_ip: "{{ digital_ocean_droplet.data.ip_address }}"
     ansible_ssh_user: algo
