Document BetweenClients_DROP

--- a/config.cfg
+++ b/config.cfg
@@ -102,7 +102,10 @@ unattended_reboot:
   enabled: false
   time: 06:00
 
-# Block traffic between connected clients
+# Block traffic between connected clients. Change this to false to enable
+# connected clients to reach each other, as well as other computers on the
+# same LAN as your Algo server (i.e. the "road warrior" setup). In this
+# case, you may also want to enable SMB/CIFS and NETBIOS traffic below.
 BetweenClients_DROP: true
 
 # Block SMB/CIFS traffic
