--- a/.travis.yml
+++ b/.travis.yml
@@ -112,12 +112,18 @@ matrix:
     - <<: *deploy-local
       name: 'Ubuntu 19.04: local deployment from docker'
       env: DEPLOY=docker UBUNTU_VERSION=19.04
+    - <<: *deploy-local
+      name: 'Ubuntu 19.10: local deployment from docker'
+      env: DEPLOY=docker UBUNTU_VERSION=19.10
     - <<: *deploy-cloudinit
       name: 'Ubuntu 18.04: cloud-init deployment'
       env: DEPLOY=cloud-init UBUNTU_VERSION=18.04
     - <<: *deploy-cloudinit
       name: 'Ubuntu 19.04: cloud-init deployment'
       env: DEPLOY=cloud-init UBUNTU_VERSION=19.04
+    - <<: *deploy-cloudinit
+      name: 'Ubuntu 19.10: cloud-init deployment'
+      env: DEPLOY=cloud-init UBUNTU_VERSION=19.10
 
 notifications:
   email: false
