Change default SSH port

--- a/config.cfg
+++ b/config.cfg
@@ -11,6 +11,9 @@ users:
 
 ### Advanced users only below this line ###
 
+# Changing the port not supported by Scaleway, the default (22) is always used
+ssh_port: 4160
+
 # Store the PKI in a ram disk. Enabled only if store_pki (retain the PKI) is set to false
 # Supports on MacOS and Linux only (including Windows Subsystem for Linux)
 pki_in_tmpfs: true
@@ -127,7 +130,7 @@ congrats:
   ca_key_pass: |
     "#        The CA key password is {{ CA_password|default(omit) }}       #"
   ssh_access: |
-    "#      Shell access: ssh -i {{ ansible_ssh_private_key_file|default(omit) }} {{ ansible_ssh_user|default(omit) }}@{{ ansible_ssh_host|default(omit) }}        #"
+    "#      Shell access: ssh -i {{ SSH_keys.private }} {{ ansible_ssh_user|default(omit) }}@{{ ansible_ssh_host|default(omit) }} -p {{ ssh_port }}        #"
 
 SSH_keys:
   comment: algo@ssh
