--- a/server.yml
+++ b/server.yml
@@ -6,16 +6,38 @@
   vars_files:
     - config.cfg
   tasks:
-    - name: Wait until the cloud-init completed
-      wait_for:
-        path: /var/lib/cloud/data/result.json
-        delay: 10
-        timeout: 600
-        state: present
-      become: false
-      when: cloudinit
-
     - block:
+      - name: Wait until the cloud-init completed
+        wait_for:
+          path: /var/lib/cloud/data/result.json
+          delay: 10
+          timeout: 600
+          state: present
+        become: false
+        when: cloudinit
+
+      - block:
+        - name: Ensure the config directory exists
+          file:
+            dest: "configs/{{ IP_subject_alt_name }}"
+            state: directory
+            mode: "0700"
+
+        - name: Dump the ssh config
+          copy:
+            dest: "configs/{{ IP_subject_alt_name }}/ssh_config"
+            mode: "0600"
+            content: |
+              Host {{ IP_subject_alt_name }} algo
+                HostName {{ IP_subject_alt_name }}
+                User {{ ansible_ssh_user }}
+                Port {{ ansible_ssh_port }}
+                IdentityFile {{ SSH_keys.private }}
+                KeepAlive yes
+                ServerAliveInterval 30
+        become: false
+        delegate_to: localhost
+
       - import_role:
           name: common
         tags: common
