--- a/input.yml
+++ b/input.yml
@@ -21,7 +21,7 @@
       - { name: Scaleway, alias: scaleway}
       - { name: OpenStack (DreamCompute optimised), alias: openstack }
       - { name: CloudStack (Exoscale optimised), alias: cloudstack }
-      - { name: Install to existing Ubuntu 18.04, 19.04, or 19.10 server (Advanced), alias: local }
+      - { name: "Install to existing Ubuntu 18.04, 19.04, or 19.10 server (Advanced)", alias: local }
   vars_files:
     - config.cfg
 
