--- a/server.yml
+++ b/server.yml
@@ -87,8 +87,8 @@
               ipsec_enabled: {{ ipsec_enabled }}
               wireguard_enabled: {{ wireguard_enabled }}
               {% if tests|default(false)|bool %}
-              ca_password: {{ CA_password }}
-              p12_password: {{ p12_export_password }}
+              ca_password: '{{ CA_password }}'
+              p12_password: '{{ p12_export_password }}'
               {% endif %}
           become: false
           delegate_to: localhost
