Switch tests to Debian

--- a/.travis.yml
+++ b/.travis.yml
@@ -107,23 +107,17 @@ matrix:
   include:
     - <<: *tests-and-linters
     - <<: *deploy-local
-      name: 'Ubuntu 18.04: local deployment from docker'
-      env: DEPLOY=docker UBUNTU_VERSION=18.04
+      name: 'Debian 9: local deployment from docker'
+      env: DEPLOY=docker DEBIAN_VERSION=stretch
     - <<: *deploy-local
-      name: 'Ubuntu 19.04: local deployment from docker'
-      env: DEPLOY=docker UBUNTU_VERSION=19.04
-    - <<: *deploy-local
-      name: 'Ubuntu 19.10: local deployment from docker'
-      env: DEPLOY=docker UBUNTU_VERSION=19.10
+      name: 'Debian 10: local deployment from docker'
+      env: DEPLOY=docker DEBIAN_VERSION=buster
     - <<: *deploy-cloudinit
-      name: 'Ubuntu 18.04: cloud-init deployment'
-      env: DEPLOY=cloud-init UBUNTU_VERSION=18.04
+      name: 'Debian 9: cloud-init deployment'
+      env: DEPLOY=cloud-init DEBIAN_VERSION=stretch
     - <<: *deploy-cloudinit
-      name: 'Ubuntu 19.04: cloud-init deployment'
-      env: DEPLOY=cloud-init UBUNTU_VERSION=19.04
-    - <<: *deploy-cloudinit
-      name: 'Ubuntu 19.10: cloud-init deployment'
-      env: DEPLOY=cloud-init UBUNTU_VERSION=19.10
+      name: 'Debian 10: cloud-init deployment'
+      env: DEPLOY=cloud-init DEBIAN_VERSION=buster
 
 notifications:
   email: false
