--- a/config.cfg
+++ b/config.cfg
@@ -5,9 +5,10 @@
 # You can generate up to 250 users at one time.
 # Usernames with leading 0's or containing only numbers should be escaped in double quotes, e.g. "000dan" or "123".
 users:
-  - phone
-  - laptop
-  - desktop
+  - phone-dns
+  - phone-full
+  - laptop-dns
+  - laptop-full
 
 ### Review these options BEFORE you run Algo, as they are very difficult/impossible to change after the server is deployed.
 
@@ -16,7 +17,7 @@ users:
 ssh_port: 4160
 
 # Deploy StrongSwan to enable IPsec support
-ipsec_enabled: true
+ipsec_enabled: false
 
 # Deploy WireGuard
 # WireGuard will listen on 51820/UDP. You might need to change to another port
@@ -46,7 +47,7 @@ adblock_lists:
 # Enable DNS encryption.
 # If 'false', 'dns_servers' should be specified below.
 # DNS encryption can not be disabled if DNS adblocking is enabled
-dns_encryption: true
+dns_encryption: false
 
 # Block traffic between connected clients. Change this to false to enable
 # connected clients to reach each other, as well as other computers on the
@@ -66,7 +67,7 @@ block_netbios: true
 # which case a reboot will take place if necessary at the time specified (as
 # HH:MM) in the time zone of your Algo server. The default time zone is UTC.
 unattended_reboot:
-  enabled: false
+  enabled: true
   time: 06:00
 
 ### Advanced users only below this line ###
@@ -114,7 +115,7 @@ strongswan_network_ipv6: 'fd9d:bc11:4020::/48'
 # If you're behind NAT or a firewall and you want to receive incoming connections long after network traffic has gone silent.
 # This option will keep the "connection" open in the eyes of NAT.
 # See: https://www.wireguard.com/quickstart/#nat-and-firewall-traversal-persistence
-wireguard_PersistentKeepalive: 0
+wireguard_PersistentKeepalive: 25
 
 # WireGuard network configuration
 wireguard_network_ipv4: 10.19.49.0/24
@@ -165,8 +166,8 @@ cloud_providers:
       owner: "099720109477"
   gce:
     size: f1-micro
-    image: ubuntu-1904
-    external_static_ip: false
+    image: debian-10
+    external_static_ip: true
   lightsail:
     size: nano_1_0
     image: ubuntu_18_04
