Set proper Azure name

--- a/config.cfg
+++ b/config.cfg
@@ -149,7 +149,7 @@ SSH_keys:
 cloud_providers:
   azure:
     size: Standard_B1S
-    image: 19.10
+    image: 19.10-DAILY
   digitalocean:
     size: s-1vcpu-1gb
     image: "ubuntu-19-10-x64"
