Configure Algo for Flatiron.

--- a/config.cfg
+++ b/config.cfg
@@ -6,9 +6,18 @@
 # Usernames with leading 0's or containing only numbers should be escaped in double quotes, e.g. "000dan" or "123".
 # Emails are not allowed
 users:
-  - phone
-  - laptop
-  - desktop
+  - avidor.turkewitz
+  - bob.nadler
+  - crystal.chang
+  - drew.price
+  - frantz.lacarriere
+  - lorgio.jimenez
+  - luke.ghenco
+  - mitch.beebe
+  - spencer.rogers
+  - steven.nunez
+  - tom.milewski
+  - yann.gregoire
 
 ### Review these options BEFORE you run Algo, as they are very difficult/impossible to change after the server is deployed.
 
@@ -73,7 +82,7 @@ block_netbios: true
 # which case a reboot will take place if necessary at the time specified (as
 # HH:MM) in the time zone of your Algo server. The default time zone is UTC.
 unattended_reboot:
-  enabled: false
+  enabled: true
   time: 06:00
 
 ### Advanced users only below this line ###
