back to azure daily

--- a/config.cfg
+++ b/config.cfg
@@ -159,8 +159,8 @@ cloud_providers:
     size: Standard_B1S
     image:
       publisher: Canonical
-      offer: 0001-com-ubuntu-server-focal
-      sku: 20_04-lts-gen2
+      offer: 0001-com-ubuntu-server-focal-daily
+      sku: 20_04-daily-lts
       version: latest
   digitalocean:
     size: s-1vcpu-1gb
