Multiple Azure fixes (#1908)
* Multiple Azure fixes

* back to azure daily

--- a/config.cfg
+++ b/config.cfg
@@ -92,6 +92,7 @@ dnscrypt_servers:
     - cloudflare-ipv6
 
 # DNS servers which will be used if 'dns_encryption' is 'false'.
+# Fallback resolvers for systemd-resolved
 # The default is to use Cloudflare.
 dns_servers:
   ipv4:
