skip pre tasks in update-users

--- a/config.cfg
+++ b/config.cfg
@@ -132,6 +132,8 @@ wireguard_network_ipv6: 2001:db8:a160::/48
 local_service_ip: "{{ '172.16.0.1' | ipmath(1048573 | random(seed=algo_server_name + ansible_fqdn)) }}"
 local_service_ipv6: "{{ 'fd00::1' | ipmath(1048573 | random(seed=algo_server_name + ansible_fqdn)) }}"
 
+# Hide sensetive data
+no_log: true
 
 congrats:
   common: |
