update user config

--- a/config.cfg
+++ b/config.cfg
@@ -7,15 +7,19 @@
 # Emails are not allowed
 users:
   - avidor.turkewitz
+  - aline.parnagian
+  - ann.schulte
   - bob.nadler
   - crystal.chang
   - drew.price
   - frantz.lacarriere
+  - gary.thom
   - lorgio.jimenez
   - luke.ghenco
+  - matt.donovan
   - mitch.beebe
+  - shawn.dsouza
   - spencer.rogers
-  - steven.nunez
   - tom.milewski
   - yann.gregoire
 
