Add colin to vpn.

--- a/config.cfg
+++ b/config.cfg
@@ -10,6 +10,7 @@ users:
   - aline.parnagian
   - ann.schulte
   - bob.nadler
+  - colin.reilly
   - crystal.chang
   - drew.price
   - frantz.lacarriere
