--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -7,7 +7,7 @@
     - update-users
 
 - fail:
-  when: cloud_test|bool
+  when: cloud_test|default(false)|bool
 
 - include_tasks: ubuntu.yml
   when: '"Ubuntu" in OS.stdout or "Linux" in OS.stdout'
